# Eva

./: .gitignore  LICENSE  README.md  pyproject.toml
algorithm/: README.md  eval_ppl.py  lmeval.py  model_loader.py
algorithm/src/: modelutils.py
notebooks/: algorithm_results.ipynb  hardware_results.ipynb
scripts/: run_algorithm_parallel.sh  run_simulator_parallel.sh
simulator/: README.md  __init__.py  aqlm_analysis.py  config.py  datasets.py  end_to_end_ops.py  main.py  ops.py  plotting.py  runner.py  specs.py  studies.py  utils.py
simulator/configs/: hardware.yaml
simulator/configs/methods/: baselines.yaml  eva.yaml
simulator/configs/models/: dense.yaml  moe.yaml
simulator/configs/studies/: e2e.yaml  fig10_fc.yaml  fig10_hw.yaml  fig11_batch.yaml  fig14_index.yaml  fig8_dse.yaml  fig9_fc.yaml  fig9_hw.yaml  table_iii_vq.yaml  table_ix_data.yaml  table_ix_vq.yaml  table_vii_abl.yaml  table_viii_data.yaml  table_x_abl.yaml
simulator/data/: ablation_area_reference.csv
simulator/io/: __init__.py  results.py
simulator/methods/: __init__.py  base.py  dense.py  figlut.py  registry.py  vqarray.py
simulator/models/: __init__.py  registry.py
simulator/pipelines/: __init__.py  e2e.py  fig10_fc.py  fig10_hw.py  fig11_batch.py  fig14_index.py  fig8_dse.py  fig9_fc.py  fig9_hw.py  table_iii_vq.py  table_ix_data.py  table_ix_vq.py  table_vii_abl.py  table_viii_data.py  table_x_abl.py
simulator/traces/: dolly_creative_writing_processed.json
